[gd_scene load_steps=19 format=3 uid="uid://byb57g7isrytn"]

[ext_resource type="Script" path="res://player/Player.gd" id="1_pwnvt"]
[ext_resource type="SpriteFrames" uid="uid://wiq62m5f1mss" path="res://player/playeranimation.tres" id="2_ilu7p"]
[ext_resource type="AudioStream" uid="uid://dqxs33dtaopoi" path="res://player/footstepSound.wav" id="3_bmdcb"]
[ext_resource type="Script" path="res://player/PlayerHitbox.gd" id="3_msg7q"]
[ext_resource type="AudioStream" uid="uid://bkjhh8ofjj6u0" path="res://player/sliding.wav" id="4_nnn2t"]
[ext_resource type="AudioStream" uid="uid://b4n32778uvupk" path="res://player/swordSwing-basic.wav" id="5_vdaqg"]
[ext_resource type="AudioStream" uid="uid://buah4vd26nv0x" path="res://player/swordSwing-secondary.wav" id="6_2aong"]
[ext_resource type="AudioStream" uid="uid://cpg2wsjex3i7q" path="res://player/swordSwing-spin.wav" id="7_8lyxq"]
[ext_resource type="AudioStream" uid="uid://f73n7762iecx" path="res://player/waterSplash.wav" id="9_dc5yw"]
[ext_resource type="AudioStream" uid="uid://ct0kb507n0w8b" path="res://player/hurtSound.wav" id="10_56jov"]
[ext_resource type="AudioStream" uid="uid://dq2epx0hq07x2" path="res://player/deathSound.wav" id="11_qkkbu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jfty5"]
radius = 8.0

[sub_resource type="Curve" id="Curve_o5sbe"]
max_value = 5.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.349345, 4.23077), 1.0202, 1.0202, 0, 0, Vector2(1, 3.84615), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_31yan"]
curve = SubResource("Curve_o5sbe")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_i4nro"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 5.0
angle_max = 360.0
direction = Vector3(0, -1, 0)
spread = 57.657
initial_velocity_min = 15.0
initial_velocity_max = 20.0
gravity = Vector3(0, 9.8, 0)
scale_min = 0.2
scale_max = 0.4
scale_curve = SubResource("CurveTexture_31yan")
hue_variation_min = -0.06
hue_variation_max = 0.05

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ae81u"]
radius = 6.0
height = 26.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vfnbb"]
radius = 23.0
height = 46.0

[sub_resource type="CircleShape2D" id="CircleShape2D_amdcd"]
radius = 28.0

[node name="Player" type="CharacterBody2D"]
z_as_relative = false
motion_mode = 1
script = ExtResource("1_pwnvt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_jfty5")

[node name="WaterSplash" type="GPUParticles2D" parent="."]
modulate = Color(0.607843, 1, 1, 0.541176)
position = Vector2(3, 3)
emitting = false
amount = 20
process_material = SubResource("ParticleProcessMaterial_i4nro")
lifetime = 0.25
explosiveness = 0.8
randomness = 0.4

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -14)
sprite_frames = ExtResource("2_ilu7p")
animation = &"attackBasic"
autoplay = "idle"

[node name="PlayerHitbox" type="Area2D" parent="." groups=["Player"]]
monitoring = false
script = ExtResource("3_msg7q")

[node name="PlayerHitboxShape" type="CollisionShape2D" parent="PlayerHitbox"]
visible = false
position = Vector2(0, -9)
shape = SubResource("CapsuleShape2D_ae81u")

[node name="WaterSplashAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_dc5yw")
volume_db = -2.889
pitch_scale = 1.12
attenuation = 1.93187

[node name="Footstep" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_bmdcb")
volume_db = -30.334
pitch_scale = 1.35
attenuation = 1.8025
max_polyphony = 2

[node name="Slide" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_nnn2t")
volume_db = 2.971
pitch_scale = 1.23

[node name="SwordSwingBasic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_vdaqg")

[node name="SwordSwingSecondary" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_2aong")

[node name="SwordSwingSpin" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_8lyxq")

[node name="HurtSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_56jov")
volume_db = -3.611

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_qkkbu")

[node name="AttackAreaPivot" type="Node2D" parent="."]

[node name="BasicAttackArea" type="Area2D" parent="AttackAreaPivot"]
monitoring = false
monitorable = false

[node name="BasicAttackShape" type="CollisionShape2D" parent="AttackAreaPivot/BasicAttackArea"]
position = Vector2(8, -6)
shape = SubResource("CapsuleShape2D_vfnbb")

[node name="SecondaryAttackArea" type="Area2D" parent="AttackAreaPivot"]
monitoring = false
monitorable = false

[node name="SecondaryAttackShape" type="CollisionShape2D" parent="AttackAreaPivot/SecondaryAttackArea"]
position = Vector2(8, -6)
shape = SubResource("CapsuleShape2D_vfnbb")

[node name="SpinAttackArea" type="Area2D" parent="AttackAreaPivot"]
monitoring = false
monitorable = false

[node name="SpinAttackShape" type="CollisionShape2D" parent="AttackAreaPivot/SpinAttackArea"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_amdcd")

[node name="PassiveStaminaRegen" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="PassiveHealthRegen" type="Timer" parent="."]
autostart = true

[connection signal="animation_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_changed"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="player_take_damage" from="PlayerHitbox" to="." method="_on_player_hitbox_player_take_damage"]
[connection signal="area_entered" from="AttackAreaPivot/BasicAttackArea" to="." method="_on_basic_attack_area_area_entered"]
[connection signal="area_entered" from="AttackAreaPivot/SecondaryAttackArea" to="." method="_on_secondary_attack_area_area_entered"]
[connection signal="area_entered" from="AttackAreaPivot/SpinAttackArea" to="." method="_on_spin_attack_area_area_entered"]
[connection signal="timeout" from="PassiveStaminaRegen" to="." method="_on_passive_stamina_regen_timeout"]
[connection signal="timeout" from="PassiveHealthRegen" to="." method="_on_passive_health_regen_timeout"]
